src/objects/Sales_Totals_by_Amounts__x.object
<CustomObject>
    <description>Sales_Totals_by_Amounts</description>
    <externalDataSource>Northwind</externalDataSource>
    <externalName>Sales_Totals_by_Amounts</externalName>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>CompanyName</description>
        <externalDeveloperName>CompanyName</externalDeveloperName>
        <label>CompanyName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <description>OrderID</description>
        <externalDeveloperName>OrderID</externalDeveloperName>
        <label>OrderID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SaleAmount__c</fullName>
        <description>SaleAmount</description>
        <externalDeveloperName>SaleAmount</externalDeveloperName>
        <label>SaleAmount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippedDate__c</fullName>
        <description>ShippedDate</description>
        <externalDeveloperName>ShippedDate</externalDeveloperName>
        <label>ShippedDate</label>
        <type>DateTime</type>
    </fields>
    <label>Sales_Totals_by_Amounts</label>
    <pluralLabel>Sales_Totals_by_Amounts</pluralLabel>
</CustomObject>